fixed bug with some gl icons not showing correctly moved hunting horn songs to its bundle combined dataAndMaps and weaponAlts into an object corrected references to 'paralyze' in weapon data additional adjustment to css regarding dropdowns on portrait mobile

--- a/public/index.css
+++ b/public/index.css
@@ -22,8 +22,8 @@
   #info-panel{
     height: calc((100vh - 150px) / 3)!important;
   }
-  #sub-dropdown {
-    min-width: 150px!important;
+  #sub-dropdown, #app-dropdown {
+    min-width: 90vw!important;
   }
   #zoomInBtn { right: 130px!important; }
   #zoomOutBtn { right: 88px!important; }
